# sendix-backend

./: DEPLOY.md  docker-compose.yml  package-lock.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arquitectura-ses-smtp.md  bounces-suppression-unsubscribe.md  package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_bounce_events.sql  002_suppression_list.sql  003_unsubscribe_tokens.sql  004_messages_soft_bounce.sql  005_messages_ses_message_id.sql  006_api_key_prefix.sql  007_increment_email_counter_fn.sql  008_remove_raw_key.sql
backend/sdk/: README.md  package-lock.json  package.json  tsconfig.json
backend/sdk-python/: .gitignore  README.md  pyproject.toml
backend/sdk-python/sendix/: __init__.py  client.py  exceptions.py  types.py
backend/sdk-python/sendix/resources/: emails.py  webhooks.py
backend/sdk-python/tests/: test_client.py
backend/sdk/src/: client.ts  index.ts  types.ts
backend/src/: server.ts
backend/src/lib/: cron.ts  db.ts  resend.ts  ses-client.ts  smtp.ts  stripe.ts  supabaseAdmin.ts
backend/src/middleware/: authApiKey.ts  authClerkUser.ts  authSupabaseUser.ts  checkPlanLimits.ts  rateLimiter.ts
backend/src/routes/: apiKeys.route.ts  billing.route.ts  bounces.route.ts  dashboard.route.ts  domain.route.ts  events.route.ts  health.route.ts  index.ts  providers.route.ts  send.route.ts  suppression.route.ts  (+4 more)
docs/: FASE_2.md  FASE_3.md  ONBOARDING_AUDIT_GUIDE.md  REDISENO_SENDIX.md  audit-500k-requests.md  migration-supabase-to-neon.md  security-audit.md
(+22 files in other folders)
