[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sendix-python"
version = "0.1.0"
description = "Official Python SDK for SendIX email platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
keywords = ["sendix", "email", "sdk", "transactional"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://sendix.io"
Repository = "https://github.com/sendix/sendix-python"


[tool.hatch.build.targets.wheel]
packages = ["sendix"]

[tool.hatch.build.targets.sdist]
include = ["sendix/*"]